Fixed position of sidebar Connect with Me links and portfolio image examples to sit within the Bootstrap grid. Added a sticky footer. Added styling to navbar links including hover and text-shadow.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
 					<h1>About Me</h1>
 
-					<img src="assets/images/about-pic.jpg" class="img-fluid" alt="Picture of Me" />
+					<img src="assets/images/about-pic.jpg" class="about-img" alt="Picture of Me" />
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sem nisl, pretium at interdum at, malesuada ut odio. Pellentesque efficitur justo sed pharetra ultrices. Aliquam facilisis nibh nec orci porttitor gravida. Sed cursus quam a faucibus consectetur. Integer semper, urna vitae elementum elementum, justo est finibus nisi, ac accumsan lacus elit ultricies dolor. Curabitur interdum velit ut augue scelerisque, sed posuere libero elementum. Nulla accumsan, metus sit amet tempus lacinia, ex nulla tempus dui, sit amet gravida libero nunc nec arcu. Sed egestas nulla vel augue dapibus porta.</p>
-
-					<p>Nullam tempus lobortis velit, fermentum euismod lectus gravida in. Vivamus auctor leo a lectus bibendum, sit amet facilisis lacus elementum. Maecenas sagittis, sapien sed scelerisque blandit, enim eros fermentum dolor, eu euismod ligula sapien ac lectus. Phasellus a ex tortor. Donec rutrum nisl risus, rhoncus blandit eros cursus et. Aliquam porta vel ante ut posuere. Pellentesque id facilisis nisi, vel porttitor justo. Etiam tincidunt sem felis, et lobortis lacus dapibus pharetra. Aenean lobortis tempor lobortis. Aliquam sollicitudin dui at diam viverra, nec blandit dolor rutrum. Sed pulvinar ex quis semper blandit.</p>
 
 					<p>Nullam tempus lobortis velit, fermentum euismod lectus gravida in. Vivamus auctor leo a lectus bibendum, sit amet facilisis lacus elementum. Maecenas sagittis, sapien sed scelerisque blandit, enim eros fermentum dolor, eu euismod ligula sapien ac lectus. Phasellus a ex tortor. Donec rutrum nisl risus, rhoncus blandit eros cursus et. Aliquam porta vel ante ut posuere. Pellentesque id facilisis nisi, vel porttitor justo. Etiam tincidunt sem felis, et lobortis lacus dapibus pharetra. Aenean lobortis tempor lobortis. Aliquam sollicitudin dui at diam viverra, nec blandit dolor rutrum. Sed pulvinar ex quis semper blandit.</p>
 
@@ -55,16 +53,35 @@
 
 			<div class="col-md-3">
 				<section class="sidebar">
-
-					<h2>Connect with Me</h2>
-					<a href="https://github.com/j-flick" target="_blank"><img src="assets/images/github.png" class="img-fluid" alt="Github" width="50px" height="50px" /></a>
-					<a href="https://www.linkedin.com/in/justin-flick-6a168b149/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid" alt="LinkedIn" width="50px" height="50px" /></a>
-					<a href="https://stackoverflow.com/users/8464805/j-flick" target="_blank"><img src="assets/images/stackoverflow.png" class="img-fluid" alt="Stack Overflow" width="50px" height="50px" /></a>
 					
+					<div class="row">
+						<div class="col-xs-12">
+							<h3>Connect with Me</h3>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-xs-4">
+							<a href="https://github.com/j-flick" target="_blank"><img src="assets/images/github.png" class="center-block" alt="Github" width="50px" height="50px" /></a>
+						</div>
+						<div class="col-xs-4">
+							<a href="https://www.linkedin.com/in/justin-flick-6a168b149/" target="_blank"><img src="assets/images/linkedin.png" class="center-block" alt="LinkedIn" width="50px" height="50px" /></a>
+						</div>
+						<div class="col-xs-4">
+							<a href="https://stackoverflow.com/users/8464805/j-flick" target="_blank"><img src="assets/images/stackoverflow.png" class="center-block" alt="Stack Overflow" width="50px" height="50px" /></a>
+						</div>
+					</div>
+
 				</section>
 			</div>
 		</div>
 	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">&copy;Copyright 2017 Justin Flick</p>
+		</div>
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
