--- a/contact.html
+++ b/contact.html
@@ -77,15 +77,34 @@
 			<div class="col-md-3">
 				<section class="sidebar">
 
-					<h2>Connect with Me</h2>
-					<a href="https://github.com/j-flick" target="_blank"><img src="assets/images/github.png" class="img-fluid" alt="Github" width="50px" height="50px" /></a>
-					<a href="https://www.linkedin.com/in/justin-flick-6a168b149/" target="_blank"><img src="assets/images/linkedin.png" class="img-fluid" alt="LinkedIn" width="50px" height="50px" /></a>
-					<a href="https://stackoverflow.com/users/8464805/j-flick" target="_blank"><img src="assets/images/stackoverflow.png" class="img-fluid" alt="Stack Overflow" width="50px" height="50px" /></a>
+					<div class="row">
+						<div class="col-xs-12">
+							<h3>Connect with Me</h3>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-xs-4">
+							<a href="https://github.com/j-flick" target="_blank"><img src="assets/images/github.png" class="center-block" alt="Github" width="50px" height="50px" /></a>
+						</div>
+						<div class="col-xs-4">
+							<a href="https://www.linkedin.com/in/justin-flick-6a168b149/" target="_blank"><img src="assets/images/linkedin.png" class="center-block" alt="LinkedIn" width="50px" height="50px" /></a>
+						</div>
+						<div class="col-xs-4">
+							<a href="https://stackoverflow.com/users/8464805/j-flick" target="_blank"><img src="assets/images/stackoverflow.png" class="center-block" alt="Stack Overflow" width="50px" height="50px" /></a>
+						</div>
+					</div>
 					
 				</section>
 			</div>
 		</div>
 	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">&copy;Copyright 2017 Justin Flick</p>
+		</div>
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
